# GtkProcRunr

./: .gitignore  CMakeLists.txt  README.md  recompile_css.sh  rename_project.sh
g_file_templates/: prefixstr_obclass_str.c  prefixstr_obclass_str.h
resources/: basic_led_indicator.glade  hw_sim_panel.glade  process_runner.glade  process_runner.gresource.xml
resources/composite_templates/: app_mode_selector.ui  log_terminal.ui  mode_prompt.ui  observer_step.ui  prompt_step.ui  run_viewer.ui  service_context.ui  setup_context.ui  setup_viewer.ui  standard_context.ui  uchoice_step.ui
resources/composite_templates/steps/: autocmd_step.ui  branch_step.ui  cmdobserver_step.ui  command_step.ui  instruction_step.ui  prompt_step.ui  waitfor_step.ui
resources/style/scss/: _process_runner_button.scss  _process_runner_colors.scss  _process_runner_overlay_popups.scss  _validated_entry.scss  process_runner_style.scss
src/: app_widgets.h  main.c  version.h.in
src/gtk_composites/: app_mode_selector.c  app_mode_selector.h  mode_prompt.c  mode_prompt.h  service_context.c  service_context.h  standard_context.c  standard_context.h
src/gtk_composites/peripheral/: basic_led_indicator.c  basic_led_indicator.h  hw_sim_panel.c  hw_sim_panel.h  log_terminal.c  log_terminal.h
src/pseudo_app_model/: app_interface.c  app_interface.h
src/sw_mvc/: pneumatic_leak_test.c  pneumatic_leak_test.h  run_model.c  run_model.h  run_viewer.c  run_viewer.h  setup_view.c  setup_view.h  tabview_factory.c  tabview_factory.h
src/sw_mvc/setup_page_templates/: autocmd_step.c  autocmd_step.h  branch_step.c  branch_step.h  cmdobserver_step.c  cmdobserver_step.h  command_step.c  command_step.h  instruction_step.c  instruction_step.h  observer_step.c  observer_step.h  prompt_step.c  prompt_step.h  template_common.h  uchoice_step.c  uchoice_step.h  waitfor_step.c  waitfor_step.h
src/utils/: logging.c  logging.h  parse_args.c  parse_args.h  sys_interface.h
src/views/: css_styler.c  css_styler.h  root_window.c  root_window.h  ui_builder.c  ui_builder.h
